Add: minor changes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <div id="status">
             <div class="result flex">
               <div class="greeting">Congratulation</div>
-              <div class="winner">Player X Win</div>
-              <button>Play again</button>
+              <div class="winner">Player None Win</div>
+              <button class="play-again-btn">Play again</button>
             </div>
             <div class="turn">
               <div class="player">
@@ -38,23 +38,26 @@
           </div>
           <div class="body">
             <div class="row row-0">
-              <div class="cell col-0"></div>
-              <div class="cell col-1"></div>
-              <div class="cell col-2"></div>
+              <div id="0" class="cell col-0"></div>
+              <div id="1" class="cell col-1"></div>
+              <div id="2" class="cell col-2"></div>
             </div>
             <div class="row row-1">
-              <div class="cell col-0"></div>
-              <div class="cell col-1"></div>
-              <div class="cell col-2"></div>
+              <div id="3" class="cell col-0"></div>
+              <div id="4" class="cell col-1"></div>
+              <div id="5" class="cell col-2"></div>
             </div>
             <div class="row row-2">
-              <div class="cell col-0"></div>
-              <div class="cell col-1"></div>
-              <div class="cell col-2"></div>
+              <div id="6" class="cell col-0"></div>
+              <div id="7" class="cell col-1"></div>
+              <div id="8" class="cell col-2"></div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- script files -->
+    <script src="./Js/script.js"></script>
   </body>
 </html>
